# router/app.go
@@ -17,6 +17,6 @@ func Router() *gin.Engine {
 	r.GET("/user/createUser", service.CreateUser)
 	r.GET("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
-	r.POST("/user/updateUser", service.FindUserPwdAndName)
+	r.POST("/user/findUserPwdAndName", service.FindUserPwdAndName)
 	return r
 }
